# rsvp-reader

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  build.bat  build_backend.bat  flake.nix  package-lock.json  package.json  treefmt.toml
backend/: main.py  parser.py  python-backend.spec  requirements.txt
backend/formats/: __init__.py  epub_parser.py  mobi_parser.py  pdf_parser.py  txt_parser.py
docs/: research_report.md
nix/lib/: shared.nix
nix/parts/: apps.nix  devshell.nix  formatter.nix  packages.nix
nix/python/: mobi.nix  standard-imghdr.nix
nix/targets/: desktop-package.nix  desktop-unwrapped.nix  frontend.nix
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: BookCard.css  BookCard.tsx  BookmarkList.css  BookmarkList.tsx  ChapterList.css  ChapterList.tsx  Controls.css  Controls.tsx  FileLoader.css  FileLoader.tsx  Layout.css  Layout.tsx  Library.css  Library.tsx  RSVPDisplay.css  RSVPDisplay.tsx  ReadingMode.css  ReadingMode.tsx  ThemeToggle.css  ThemeToggle.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useLibrary.ts  useRSVP.ts  useSettings.ts
src/lib/: browserBooks.ts  browserEpub.ts  browserMobi.ts  browserTextBook.ts  ebookDom.ts  rsvpTokenizer.ts
src/styles/: design-tokens.css
